--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 PORT=3000
 DB_CONNECTION=mongodb+srv://hurairah:huraira@cluster0.wrh6dpr.mongodb.net/e_commerce?retryWrites=true&w=majority&appName=Cluster0
 SECRET_KEY=thisisthesecretkeyinthedotenvfile
+AUTH_EMAIL='abuhurairah775@gmail.com'
+AUTH_PASSWORD='wcbx mybu mxwg xqgq'
